# squeegeeguy

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  appointments.py  checkin.py  com.squeegeeguy.leadgen.plist  config.py  db.py  digest.py  draft.py  enrich.py  inbound.py  listen.py  llm.py  prospect.py  pyproject.toml  replies.py  run.py  score.py  send.py  setup.sh  test_core.py
.impeccable/critique/: 2026-07-05T00-23-40Z__site-index-html.md
site/: GOOGLE_BUSINESS_PROFILE_CHECKLIST.md  index.html
