[project]
name = "squeegeeguy-leadgen"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "feedparser>=6.0",
    "httpx>=0.28",
    "pydantic>=2.11",
    "python-dotenv>=1.1",
]

[project.optional-dependencies]
listen = [
    "praw>=7.7",
]

[project.scripts]
leadgen = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
